--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -81,6 +81,10 @@
 		status = "okay";
 	};
 
+	gpio_keypad {
+		reg = <0x0 0xFF800000 0x0 0x400>;
+	};
+
 	gpioleds {
 		sys_led {
 			/delete-property/ retain-state-suspended;
