--- a/arch/arm64/boot/dts/amlogic/g12b_a311d_khadas_vim3.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_a311d_khadas_vim3.dts
@@ -33,4 +33,13 @@
 		compatible = "haoyu,hym8563";
 		reg = <0x51>;
 	};
+
+	khadas-mcu {
+		compatible = "khadas-mcu";
+		reg = <0x18>;
+		fan,trig_temp_level0 = <50>;
+		fan,trig_temp_level1 = <60>;
+		fan,trig_temp_level2 = <70>;
+		hwver = "VIM3.V11"; /* Will be updated in uboot. */
+	};
 };
