arch/arm64/boot/dts/amlogic: add basic S905X3 device-trees

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -10,6 +10,10 @@ dtb-$(CONFIG_ARM64) += g12b_a311d_khadas_vim3.dtb
 dtb-$(CONFIG_ARM64) += g12b_s922x_odroid_n2.dtb
 dtb-$(CONFIG_ARM64) += g12b_s922x_odroid_n2_dvb.dtb
 dtb-$(CONFIG_ARM64) += sm1_s905d3_khadas_vim3l.dtb
+dtb-$(CONFIG_ARM64) += sm1_s905x3_2g.dtb
+dtb-$(CONFIG_ARM64) += sm1_s905x3_2g_1gbit.dtb
+dtb-$(CONFIG_ARM64) += sm1_s905x3_4g.dtb
+dtb-$(CONFIG_ARM64) += sm1_s905x3_4g_1gbit.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
