--- a/arch/arm64/boot/dts/amlogic/g12b_s922x_beelink_gt_king.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922x_beelink_gt_king.dts
@@ -1,7 +1,7 @@
 #include "coreelec_g12b.dtsi"
 
 /{
-	model = "Beelink GT-King";
+	model = "Beelink GT-King rev. B";
 	coreelec-dt-id = "g12b_s922x_beelink_gt_king";
 
 	memory@00000000 {
