--- a/arch/arm64/boot/dts/amlogic/g12b_s922x_ugoos_am6.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922x_ugoos_am6.dts
@@ -1,7 +1,7 @@
 #include "coreelec_g12b.dtsi"
 
 /{
-	model = "UGOOS AM6";
+	model = "UGOOS AM6 rev. B";
 	coreelec-dt-id = "g12b_s922x_ugoos_am6";
 
 	/delete-node/ memory@00000000;
