--- a/arch/arm64/boot/dts/amlogic/g12b_s922x_ugoos_am6_rev_a.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922x_ugoos_am6_rev_a.dts
@@ -1,7 +1,7 @@
 #include "coreelec_g12b_a.dtsi"
 
 /{
-	model = "UGOOS AM6";
+	model = "UGOOS AM6 rev. A";
 	coreelec-dt-id = "g12b_s922x_ugoos_am6_rev_a";
 
 	/delete-node/ memory@00000000;
