dts: remove 'retain-state-suspended' on sys_led node to switch off system led on suspend

--- a/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/coreelec_common.dtsi
@@ -80,6 +80,12 @@
 		dev_name = "openvfd";
 		status = "okay";
 	};
+
+	gpioleds {
+		sys_led {
+			/delete-property/ retain-state-suspended;
+		};
+	};
 };
 
 &meson_fb {
