--- a/arch/arm64/boot/dts/amlogic/kvim3l_linux.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim3l_linux.dts
@@ -43,6 +43,7 @@
 		i2c2 = &i2c2;
 		i2c3 = &i2c3;
 		i2c4 = &i2c_AO;
+		spi1 = &spicc1;
 	};
 
 //	memory@00000000 {
@@ -172,6 +173,13 @@
 			retain-state-suspended;
 			linux,default-trigger="default-on";
 		};
+
+		red_led {
+			label = "red_red";
+			gpios = <&gpio_expander 5 GPIO_ACTIVE_HIGH>;
+			default-state ="off";
+			linux,default-trigger="none";
+		};
 	};
 
 	cvbsout {
@@ -281,8 +289,17 @@
 	gpiomem {
 		compatible = "amlogic, gpiomem";
 		reg = <0x0 0xff634000 0x0 0x1000>;
+		dev_name = "gpiomem";
 		status = "okay";
 	};
+
+	gpiomem_ao {
+		compatible = "amlogic, gpiomem";
+		reg = <0x0 0xff800000 0x0 0x1000>;
+		dev_name = "gpiomem-ao";
+		status = "okay";
+	};
+
 	deinterlace {
 		compatible = "amlogic, deinterlace";
 		status = "okay";
@@ -312,6 +329,23 @@
 		dev_name = "ionvideo";
 		status = "okay";
 	};
+
+	amlvideo2_0 {
+		compatible = "amlogic, amlvideo2";
+		dev_name = "amlvideo2";
+		status = "okay";
+		amlvideo2_id = <0>;
+		cma_mode = <1>;
+	};
+
+	amlvideo2_1 {
+		compatible = "amlogic, amlvideo2";
+		dev_name = "amlvideo2";
+		status = "okay";
+		amlvideo2_id = <1>;
+		cma_mode = <1>;
+	};
+
 	vm0 {
 		compatible = "amlogic, vm";
 		memory-region = <&vm0_cma_reserved>;
@@ -541,6 +575,9 @@
 		cm_en = <0>;/*1:enabel ;0:disable*/
 		/*0: 709/601  1: bt2020*/
 		tx_op_color_primary = <0>;
+
+		interrupts = <0 56 1>;
+		interrupt-names = "vsync2";
 	};
 
 	amdolby_vision {
@@ -551,9 +588,14 @@
 	};
 
 	/* Audio Related start */
-	dummy_codec:dummy{
+	spdif_codec:spdif_dummy{
 		#sound-dai-cells = <0>;
 		compatible = "linux,spdif-dit";
+		status = "okay";
+	};
+	dummy_codec:dummy{
+		#sound-dai-cells = <0>;
+		compatible = "amlogic, aml_dummy_codec";
 		status = "okay";
 	};
 	amlogic_codec:t9015{
@@ -575,14 +617,16 @@
 
 		aml-audio-card,dai-link@0 {
 			mclk-fs = <128>;
-			/* suffix-name, sync with android audio hal used for */
-			suffix-name = "alsaPORT-spdif";
+			/* suffix-name, sync with android audio hal
+			 * what's the dai link used for
+			 */
+			suffix-name = "alsaPORT-spdifb";
 			cpu {
-				sound-dai = <&spdifa>;
+				sound-dai = <&spdifb>;
 				system-clock-frequency = <6144000>;
 			};
 			codec {
-				sound-dai = <&dummy_codec>;
+				sound-dai = <&spdif_codec>;
 			};
 		};
 
@@ -604,15 +648,15 @@
 			tdmacpu: cpu {
 				sound-dai = <&tdma>;
 				dai-tdm-slot-tx-mask =
-							<1 1 1 1 1 1 1 1>;
+							<1>;
 				dai-tdm-slot-rx-mask =
-							<1 1 1 1 1 1 1 1>;
-				dai-tdm-slot-num = <8>;
-				dai-tdm-slot-width = <32>;
-				system-clock-frequency = <24576000>;
+							<1>;
+				dai-tdm-slot-num = <2>;
+				dai-tdm-slot-width = <16>;
+				system-clock-frequency = <256000>;
 			};
 			tdmacodec: codec {
-				sound-dai = <&dummy_codec &dummy_codec>;
+				sound-dai = <&dummy_codec>;
 			};
 		};
 
@@ -676,23 +720,20 @@
 				system-clock-frequency = <12288000>;
 			};
 			tdmccodec: codec {
-				sound-dai = <&dummy_codec  &dummy_codec>;
+				sound-dai = <&dummy_codec>;
 			};
 		};
 
 		aml-audio-card,dai-link@4 {
 			mclk-fs = <128>;
-			continuous-clock;
-			/* suffix-name, sync with android audio hal
-			 * what's the dai link used for
-			 */
-			suffix-name = "alsaPORT-spdifb";
+			/* suffix-name, sync with android audio hal used for */
+			suffix-name = "alsaPORT-spdif";
 			cpu {
-				sound-dai = <&spdifb>;
+				sound-dai = <&spdifa>;
 				system-clock-frequency = <6144000>;
 			};
 			codec {
-				sound-dai = <&dummy_codec>;
+				sound-dai = <&spdif_codec>;
 			};
 		};
 
@@ -945,51 +986,51 @@
 
 		opp00 {
 			opp-hz = /bits/ 64 <100000000>;
-			opp-microvolt = <730000>;
+			opp-microvolt = <760000>;
 		};
 		opp01 {
 			opp-hz = /bits/ 64 <250000000>;
-			opp-microvolt = <730000>;
+			opp-microvolt = <760000>;
 		};
 		opp02 {
 			opp-hz = /bits/ 64 <500000000>;
-			opp-microvolt = <730000>;
+			opp-microvolt = <760000>;
 		};
 		opp03 {
 			opp-hz = /bits/ 64 <667000000>;
-			opp-microvolt = <750000>;
+			opp-microvolt = <780000>;
 		};
 		opp04 {
 			opp-hz = /bits/ 64 <1000000000>;
-			opp-microvolt = <770000>;
+			opp-microvolt = <800000>;
 		};
 		opp05 {
 			opp-hz = /bits/ 64 <1200000000>;
-			opp-microvolt = <780000>;
+			opp-microvolt = <810000>;
 		};
 		opp06 {
 			opp-hz = /bits/ 64 <1404000000>;
-			opp-microvolt = <790000>;
+			opp-microvolt = <820000>;
 		};
 		opp07 {
 			opp-hz = /bits/ 64 <1500000000>;
-			opp-microvolt = <800000>;
+			opp-microvolt = <830000>;
 		};
 		opp08 {
 			opp-hz = /bits/ 64 <1608000000>;
-			opp-microvolt = <810000>;
+			opp-microvolt = <860000>;
 		};
 		opp09 {
 			opp-hz = /bits/ 64 <1704000000>;
-			opp-microvolt = <850000>;
+			opp-microvolt = <900000>;
 		};
 		opp10 {
 			opp-hz = /bits/ 64 <1800000000>;
-			opp-microvolt = <900000>;
+			opp-microvolt = <940000>;
 		};
 		opp11 {
 			opp-hz = /bits/ 64 <1908000000>;
-			opp-microvolt = <950000>;
+			opp-microvolt = <1000000>;
 		};
 	};
 
@@ -1026,7 +1067,7 @@
 		compatible = "edt,edt-ft5336", "ft5x06";
 		reg = <0x38>;
 		interrupt_pin = <&gpio GPIOA_5 GPIO_ACTIVE_HIGH>;
-		reset_pin = <6>;
+		reset-gpios = <&gpio_expander 6 GPIO_ACTIVE_HIGH>;
 		status = "okay";
 	};
 };
@@ -1037,9 +1078,11 @@
 	pinctrl-0=<&ao_i2c_master_pins1>;
 	clock-frequency = <400000>; /* default 100k */
 
-	khadas-tca6408{
-		compatible = "khadas-tca6408";
+	gpio_expander: gpio-controller@20 {
+		compatible = "ti,tca6408";
 		reg = <0x20>;
+		gpio-controller;
+		#gpio-cells = <2>;
 		status = "okay";
 	};
 
@@ -1064,13 +1107,8 @@
 	tdma: tdm@0 {
 		compatible = "amlogic, sm1-snd-tdma";
 		#sound-dai-cells = <0>;
-		dai-tdm-lane-slot-mask-in = <1 1>;
-		dai-tdm-oe-lane-slot-mask-out = <1 1>;
-		dai-format = "dsp_a";
-		dai-tdm-slot-tx-mask = <1>;
-		dai-tdm-slot-rx-mask = <1>;
-		dai-tdm-slot-num = <2>;
-		dai-tdm-slot-width = <16>;
+		dai-tdm-lane-slot-mask-in = <0 1>;
+		dai-tdm-lane-slot-mask-out = <1 0>;
 		dai-tdm-clk-sel = <0>;
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_A
 				&clkc CLKID_MPLL0>;
@@ -1108,6 +1146,7 @@
 		 * 4: spdifout_b;
 		 */
 		samesource_sel = <3>;
+
 		/*enable default mclk(12.288M), before extern codec start*/
 		start_clk_enable = <1>;
 
@@ -1200,8 +1239,10 @@
 				<GIC_SPI 151 IRQ_TYPE_EDGE_RISING>;
 
 		interrupt-names = "irq_spdifin";
-		pinctrl-names = "spdif_pins";
+		pinctrl-names = "spdif_pins",
+						"spdif_pins_mute";
 		pinctrl-0 = <&spdifout>;/* bob remove &spdifin*/
+		pinctrl-1 = <&spdifout_a_mute>;
 
 		/*spdif clk tuning enable*/
 		clk_tuning_enable = <1>;
@@ -1216,31 +1257,6 @@
 				&clkaudio CLKID_AUDIO_SPDIFOUT_B>;
 		clock-names = "sysclk",
 				"gate_spdifout", "clk_spdifout";
-
-		status = "okay";
-	};
-
-	earc:earc {
-		compatible = "amlogic, sm1-snd-earc";
-		#sound-dai-cells = <0>;
-
-		clocks = <&clkaudio CLKID_AUDIO_GATE_EARCRX
-			&clkaudio CLKID_EARCRX_CMDC
-			&clkaudio CLKID_EARCRX_DMAC
-			&clkc CLKID_FCLK_DIV5
-			&clkc CLKID_FCLK_DIV3
-			>;
-		clock-names = "rx_gate",
-			"rx_cmdc",
-			"rx_dmac",
-			"rx_cmdc_srcpll",
-			"rx_dmac_srcpll";
-
-		interrupts = <
-			GIC_SPI 88 IRQ_TYPE_EDGE_RISING
-			GIC_SPI 87 IRQ_TYPE_EDGE_RISING
-		>;
-		interrupt-names = "rx_cmdc", "rx_dmac";
 
 		status = "okay";
 	};
@@ -1413,10 +1429,12 @@
 	aed:effect {
 		compatible = "amlogic, snd-effect-v3";
 		#sound-dai-cells = <0>;
+
 		clocks = <&clkaudio CLKID_AUDIO_GATE_EQDRC
 			&clkc CLKID_FCLK_DIV5
 			&clkaudio CLKID_AUDIO_EQDRC>;
 		clock-names = "gate", "srcpll", "eqdrc";
+
 		/*
 		 * 0:tdmout_a
 		 * 1:tdmout_b
@@ -1438,16 +1456,14 @@
 		mux { /* GPIOX_11, GPIOX_10, GPIOX_9 */
 			groups = "tdma_sclk",
 				"tdma_fs",
-				"tdma_dout0",
-				"tdma_dout1";
+				"tdma_dout0";
 			function = "tdma_out";
 		};
 	};
 
 	tdmin_a: tdmin_a {
 		mux { /* GPIOX_8 */
-			groups = "tdma_din0",
-					"tdma_din1";
+			groups = "tdma_din1";
 			function = "tdma_in";
 		};
 	};
@@ -1559,6 +1575,12 @@
 			function = "spdif_out_ao";
 		};
 	};
+	spdifout_a_mute: spdifout_a_mute {
+		mux { /* gpiao_10 */
+			groups = "GPIOAO_10";
+			function = "gpio_aobus";
+		};
+	};
 
 	bl_pwm_off_pins:bl_pwm_off_pin {
 		mux {
@@ -1581,6 +1603,8 @@
 
 &pwm_ef {
 	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pwm_f_pins2>;
 };
 
 &dwc3 {
@@ -1713,6 +1737,10 @@
 
 &lcd {
 	clk_path = <1>;
+
+	lcd_cpu-gpios = <&gpio_expander 0 GPIO_ACTIVE_HIGH
+					&gpio_expander 1 GPIO_ACTIVE_HIGH>;
+	lcd_cpu_gpio_names = "GPIO_EXPANDER_0","GPIO_EXPANDER_1";
 };
 
 &gpu{
@@ -1726,4 +1754,20 @@
 
 &saradc {
 	status = "okay";
+};
+
+&spicc1 {
+	status = "disabled";
+	pinctrl-names = "default";
+	pinctrl-0 = <&spicc1_pins>;
+	cs-gpios = <&gpio GPIOH_6 0>;
+
+	spidev@0 {
+		status = "okay";
+
+		compatible = "linux,spidev";
+		/* spi default max clock 100Mhz */
+		spi-max-frequency = <100000000>;
+		reg = <0>;
+	};
 };
