--- a/arch/arm/boot/dts/amlogic/sc2_s905x4_ah219.dts
+++ b/arch/arm/boot/dts/amlogic/sc2_s905x4_ah219.dts
@@ -344,119 +344,7 @@
 		amlvideo2_id = <1>;
 		cma_mode = <1>;
 	};
-
-	dvb_avl6762 {
-		compatible = "amlogic, dvb";
-		dev_name = "dvb";
-		status = "disabled";
-		fe0_mode = "external";
-		fe0_demod = "Avl6762";
-		fe0_i2c_adap_id = <&i2c3>;
-		fe0_demod_i2c_addr = <0x14>;
-		fe0_ts = <0>;
-		fe0_reset_value = <0>;
-		//fe0_reset_gpio = <&gpio GPIOZ_10 GPIO_ACTIVE_HIGH>;
-
-		ts0 = "serial";
-		ts0_control = <0x800>;
-		ts0_invert = <0>;
-		interrupts = <0 23 1
-		0 5 1
-		0 53 1
-		0 19 1
-		0 25 1
-		0 18 1
-		0 24 1>;
-		interrupt-names = "demux0_irq",
-		"demux1_irq",
-		"demux2_irq",
-		"dvr0_irq",
-		"dvr1_irq",
-		"dvrfill0_fill",
-		"dvrfill1_flush";
-		pinctrl-names = "s_ts0";
-		pinctrl-0 = <&dvb_s_ts0_pins>;
-		clock-names = "demux", "ahbarb0", "parser_top";
-	};
-
-	dvb_mn88436 {
-		compatible = "amlogic, dvb";
-		dev_name = "dvb";
-		status = "disabled";
-
-		dtv_demod0 = "Mn88436";
-		dtv_demod0_i2c_adap = <&i2c3>;
-		dtv_demod0_i2c_addr = <0x14>;
-		dtv_demod0_reset_value = <0>;
-		//dtv_demod0_reset_gpio = <&gpio_ao GPIOAO_10 GPIO_ACTIVE_HIGH>;
-		dtv_demod0_ant_poweron_value = <0>;
-		dtv_demod0_ant_power_gpio = <&gpio GPIOH_5 GPIO_ACTIVE_HIGH>;
-		//dtv_demod0_tuner_type = <52>;
-		fe0_dtv_demod = <0>;
-		fe0_ts  = <0>;
-		fe0_dev = <0>;
-
-		ts0 = "serial";
-		ts0_control = <0x800>;
-		ts0_invert = <0>;
-		interrupts = <0 23 1
-		0 5 1
-		0 53 1
-		0 19 1
-		0 25 1
-		0 18 1
-		0 24 1>;
-		interrupt-names = "demux0_irq",
-		"demux1_irq",
-		"demux2_irq",
-		"dvr0_irq",
-		"dvr1_irq",
-		"dvrfill0_fill",
-		"dvrfill1_flush";
-		pinctrl-names = "s_ts0";
-		pinctrl-0 = <&dvb_s_ts0_pins>;
-		clock-names = "demux", "ahbarb0", "parser_top";
-	};
-
 	dvb_cxd2856 {
-		compatible = "amlogic, dvb";
-		dev_name = "dvb";
-		status = "disabled";
-		fe0_mode = "external";
-		fe0_demod = "cxd2856";
-		fe0_i2c_adap_id = <&i2c3>;
-		fe0_demod_i2c_addr = <0xD8>;
-		fe0_reset_value = <0>;
-		//fe0_reset_gpio = <&gpio_ao GPIOAO_10 GPIO_ACTIVE_HIGH>;
-		fe0_ant_poweron_value = <0>;
-		//fe0_ant_power_gpio = <&gpio GPIOH_5 GPIO_ACTIVE_HIGH>;
-		fe0_dtv_demod = <0>;
-		fe0_ts  = <0>;
-		fe0_dev = <0>;
-
-		ts0 = "serial";
-		ts0_control = <0x800>;
-		ts0_invert = <0>;
-		interrupts = <0 23 1
-		0 5 1
-		0 53 1
-		0 19 1
-		0 25 1
-		0 18 1
-		0 24 1>;
-		interrupt-names = "demux0_irq",
-		"demux1_irq",
-		"demux2_irq",
-		"dvr0_irq",
-		"dvr1_irq",
-		"dvrfill0_fill",
-		"dvrfill1_flush";
-		pinctrl-names = "s_ts0";
-		pinctrl-0 = <&dvb_s_ts0_pins>;
-		clock-names = "demux", "ahbarb0", "parser_top";
-	};
-
-	dvb_mxl258c {
 		compatible = "amlogic sc2, dvb";
 		dev_name = "dvb";
 		status = "okay";
@@ -464,31 +352,76 @@
 		reg = <0xfe000000 0x480000>;
 
 		dmxdev_num = <4>;
-		dmx0_sid = <0x20>;
-		dmx1_sid = <0x20>;
-		dmx2_sid = <0x20>;
-		dmx3_sid = <0x20>;
 
 		tsn_from = "demod";
-		/*set pass tse or not, default is 1*/
-		tse_enable = <0>;
+
+		fe0_mode = "external";
+		fe0_demod = "cxd2856";
+		fe0_i2c_adap_id = <&i2c2>;
+		fe0_demod_i2c_addr = <0xD8>;
+		fe0_reset_value = <0>;
+		fe0_reset_gpio = <&gpio GPIOC_7 GPIO_ACTIVE_HIGH>;
+		fe0_reset_dir = <1>; /* 0: out, 1: in. */
+		fe0_ant_poweron_value = <0>;
+		fe0_ant_power_gpio = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
+		fe0_dtv_demod = <0>;
+		fe0_ts  = <0>;
+		fe0_dev = <0>;
 
 		/*single demod setting */
-		/*ts will bind with dmx device*/
-		ts0_dmx = <0>;
+		ts0_sid = <0x20>;
+		ts0 = "serial-4wire"; /* tsinA: serial-4wire, serial-3wire */
+		ts0_control = <0x0>;
+		ts0_invert = <0>;
+
+		fe1_mode = "external";
+		fe1_demod = "cxd2856";
+		fe1_i2c_adap_id = <&i2c2>;
+		fe1_demod_i2c_addr = <0xCA>;
+		fe1_reset_value = <0>;
+		fe1_reset_gpio = <&gpio GPIOC_7 GPIO_ACTIVE_HIGH>;
+		fe1_reset_dir = <1>; /* 0: out, 1: in. */
+		fe1_ant_poweron_value = <0>;
+		fe1_ant_power_gpio = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
+		fe1_dtv_demod = <1>;
+		fe1_ts  = <1>;
+		fe1_dev = <1>;
+
+		ts1_sid = <0x21>;
+		ts1 = "serial-4wire";
+		ts1_control = <0x0>;
+		ts1_invert = <0>;
+
+		pinctrl-names = "s_ts0", "s_ts1";
+		pinctrl-0 = <&dvb_s_ts0_pins>;
+		pinctrl-1 = <&dvb_s_ts1_pins>;
+	};
+	dvb_mxl258c {
+		compatible = "amlogic sc2, dvb";
+		dev_name = "dvb";
+		status = "disabled";
+
+		reg = <0xfe000000 0x480000>;
+
+		dmxdev_num = <4>;
+
+		tsn_from = "demod";
+
+		/*single demod setting */
+		ts0_sid = <0x20>;
 		ts0 = "serial-4wire"; /* tsinA: serial-4wire, serial-3wire */
 		ts0_control = <0x0>;
 
-		//ts1_dmx = <1>;
 		/* tsinB: parallel, serial-4wire, serial-3wire */
+		//ts1_sid = <0x21>;
 		//ts1 = "serial-4wire";
 		//ts1_control = <0x0>;
 
-		//ts2_dmx = <1>;
+		//ts2_sid = <0x22>;
 		//ts2 = "serial-4wire"; /* tsinC: serial-4wire, serial-3wire */
 		//ts2_control = <0x0>;
 
-		//ts3_dmx = <1>;
+		//ts3_sid = <0x23>;
 		//ts3 = "serial-4wire"; /* tsinD: serial-4wire, serial-3wire */
 		//ts3_control = <0x0>;
 
@@ -590,9 +523,10 @@
 		//fe3_ts = <3>; /* select tsin port */
 
 		/* serial */
-		//pinctrl-names = "s_ts0", "s_ts1", "s_ts2", "s_ts3";
 		pinctrl-names = "s_ts0";
 		pinctrl-0 = <&dvb_s_ts0_pins>;
+		//pinctrl-names = "s_ts0", "s_ts1", "s_ts2", "s_ts3";
+		//pinctrl-0 = <&dvb_s_ts0_pins>;
 		//pinctrl-1 = <&dvb_s_ts1_pins>;
 		//pinctrl-2 = <&dvb_s_ts2_pins>;
 		//pinctrl-3 = <&dvb_s_ts3_pins>;
@@ -604,7 +538,6 @@
 		//pinctrl-2 = <&dvb_p_ts1_pins>;
 		//pinctrl-3 = <&dvb_p_ts1_pins>;
 	};
-
 	/* SMC */
 	smartcard {
 		compatible = "amlogic,smartcard";
