--- a/drivers/amlogic/media/video_sink/Makefile
+++ b/drivers/amlogic/media/video_sink/Makefile
@@ -1,3 +1,3 @@
 obj-y	+=	amvideo.o
 CFLAGS_video.o := -I$(src)
-amvideo-objs	+=	video.o video_keeper.o vpp.o video_hw.o video_receiver.o video_reg.o
+amvideo-objs	+=	video.o video_keeper.o vpp.o video_hw.o video_receiver.o video_reg.o video_signal_notify.o
