smartcard: add sc2 smartcard [1/1]
PD#SWPL-33551

Problem:
 add smartcard for sc2

Solution:
 add smartcard for sc2

Verify:
 verified at AH219

Signed-off-by: Chuangcheng Peng <chuangcheng.peng@amlogic.com>
Change-Id: Ie93852800c951602bcbc4cd05d34dc7f6053faca

--- a/arch/arm/boot/dts/amlogic/mesonsc2.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesonsc2.dtsi
@@ -2285,6 +2285,16 @@
 		};
 	};
 
+	sd_iso7816_pins:sd_iso7816_pins {
+		mux {
+			groups = "iso7816_clk_c",
+				"iso7816_data_c";
+			function = "iso7816";
+			input-enable;
+			bias-pull-down;
+		};
+	};
+
 	sdio_x_clk_cmd_pins:sdio_x_clk_cmd_pins {
 		mux {
 			groups = "GPIOX_5";
