--- a/arch/arm64/boot/dts/amlogic/sc2_s905x4_ah219.dts
+++ b/arch/arm64/boot/dts/amlogic/sc2_s905x4_ah219.dts
@@ -501,12 +501,37 @@
 
 	/* SMC */
 	smartcard {
-		compatible = "amlogic,smartcard";
+		compatible = "amlogic,smartcard-sc2";
 		dev_name = "smartcard";
 		status = "okay";
 
 		reg = <0x0 0xfe000000 0x0 0x480000>;
-		clocks = <&clkc CLKID_SMARTCARD>;
+		irq_trigger_type = "GPIO_IRQ_LOW";
+
+		reset_pin-gpios = <&gpio GPIOC_3 GPIO_ACTIVE_HIGH>;
+		detect_pin-gpios = <&gpio GPIOC_2 GPIO_ACTIVE_HIGH>;
+		enable_5v3v_pin-gpios = <&gpio GPIOC_4 GPIO_ACTIVE_HIGH>;
+		enable_pin-gpios = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
+
+		interrupts = <0 37 1>;
+		interrupt-names = "smc0_irq";
+		/*
+		 *Smc clock source, if change this,
+		 *you must adjust clk and divider in smartcard.c
+		 */
+		smc0_clock_source = <0>;
+		smc0_irq = <37>;		//smc irq
+		/*0: high voltage on detect pin indicates card in.*/
+		smc0_det_invert = <0>;
+		smc0_5v3v_level = <0>;
+		/*Ordinarily,smartcard controller needs a enable pin.*/
+		smc_need_enable_pin = "yes";
+		reset_level = <0>;
+		smc0_enable_level = <0>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&sd_iso7816_pins>;
+		clocks = <&clkc CLKID_SC_CLK_GATE>;
 		clock-names = "smartcard";
 	};
 
@@ -1749,7 +1774,7 @@
 };
 
 &sd_emmc_b {
-	status = "okay";
+	status = "disabled";
 	sd {
 		caps = "MMC_CAP_4_BIT_DATA",
 			 "MMC_CAP_MMC_HIGHSPEED",
@@ -1766,7 +1791,7 @@
 
 
 &sd_emmc_a {
-	status = "okay";
+	status = "disabled";
 	sdio {
 		caps = "MMC_CAP_4_BIT_DATA",
 			 "MMC_CAP_MMC_HIGHSPEED",
