--- a/drivers/amlogic/Makefile
+++ b/drivers/amlogic/Makefile
@@ -76,6 +76,8 @@ obj-$(CONFIG_AMLOGIC_VRTC)		+= vrtc/
 
 obj-$(CONFIG_AMLOGIC_SMARTCARD)		+= smartcard/
 
+obj-$(CONFIG_AMLOGIC_SMARTCARD)		+= smartcard_sc2/
+
 obj-$(CONFIG_AMLOGIC_CEC)		+= cec/
 
 obj-$(CONFIG_AMLOGIC_UNIFYKEY)    += unifykey/
