KASAN: exclude dmc_monitor.c file when KASAN enable [1/1]
PD#SWPL-34122

Problem:
too many KASAN misinformation is reported when enabling KASAN.

Solution:
exclude dmc_monitor.c file when KASAN enable.

Verify:
ac214

Change-Id: Ie4371b28dd643945c29c384af6b250d001db8ad8
Signed-off-by: changqing.gao <changqing.gao@amlogic.com>

--- a/drivers/amlogic/ddr_tool/Makefile
+++ b/drivers/amlogic/ddr_tool/Makefile
@@ -1,3 +1,5 @@
+KASAN_SANITIZE_dmc_monitor.o := n
+
 obj-y += ddr_port_desc.o
 obj-$(CONFIG_AMLOGIC_DDR_WINDOW_TOOL)	+= ddr_window.o
 obj-$(CONFIG_AMLOGIC_DDR_BANDWIDTH)	+= ddr_bandwidth.o ddr_band_op_gxl.o \
