Provision: add Provision function on ampere [2/2]
PD#SWPL-34747

Problem:
need add Provision function on ampere

Solution:
add Provision function on ampere

Verify:
ampere

Change-Id: Id3ab9b4ec2469d5e3bbe8ca311f2d0f332c13b29
Signed-off-by: Xindong Xu <xindong.xu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/gxl_p212_2g.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p212_2g.dts
@@ -1121,7 +1121,7 @@
 		compatible = "amlogic, unifykey";
 		status = "ok";
 
-		unifykey-num = <18>;
+		unifykey-num = <19>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -1140,6 +1140,7 @@
 		unifykey-index-15= <&keysn_15>;
 		unifykey-index-16= <&keysn_16>;
 		unifykey-index-17= <&keysn_17>;
+		unifykey-index-18= <&keysn_18>;
 
 		keysn_0: key_0{
 			key-name = "usid";
@@ -1233,6 +1234,11 @@
 			key-name = "oemkey";
 			key-device = "normal";
 			key-permit = "read","write","del";
+		};
+		keysn_18:key_18{
+			key-name = "KEY_PROVISION_XXX";
+			key-device = "provision";
+			key-permit = "write";
 		};
 	};//End unifykey
 };
