--- a/arch/arm64/boot/dts/amlogic/gxl_p212_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/gxl_p212_1g.dts
@@ -1120,7 +1120,7 @@
 		compatible = "amlogic, unifykey";
 		status = "ok";
 
-		unifykey-num = <19>;
+		unifykey-num = <20>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -1140,6 +1140,7 @@
 		unifykey-index-16= <&keysn_16>;
 		unifykey-index-17= <&keysn_17>;
 		unifykey-index-18= <&keysn_18>;
+		unifykey-index-19= <&keysn_19>;
 
 		keysn_0: key_0{
 			key-name = "usid";
@@ -1238,6 +1239,11 @@
 			key-name = "oemkey";
 			key-device = "normal";
 			key-permit = "read","write","del";
+		};
+		keysn_19:key_19{
+			key-name = "KEY_PROVISION_XXX";
+			key-device = "provision";
+			key-permit = "write";
 		};
 	};//End unifykey
 
