--- a/arch/arm64/boot/dts/amlogic/mesonsc2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesonsc2.dtsi
@@ -1784,6 +1784,12 @@
 			iv_swap = /bits/ 8 <0x0>;
 		};
 
+		aml_tdes {
+			compatible = "amlogic,tdes_dma";
+			dev_name = "aml_tdes_dma";
+			status = "okay";
+		};
+
 		aml_sha {
 			compatible = "amlogic,sha_dma";
 			dev_name = "aml_sha_dma";
