--- a/arch/arm/boot/dts/amlogic/gxl_p244_1g.dts
+++ b/arch/arm/boot/dts/amlogic/gxl_p244_1g.dts
@@ -1126,7 +1126,7 @@
 		compatible = "amlogic, unifykey";
 		status = "ok";
 
-		unifykey-num = <18>;
+		unifykey-num = <20>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -1145,6 +1145,8 @@
 		unifykey-index-15= <&keysn_15>;
 		unifykey-index-16= <&keysn_16>;
 		unifykey-index-17= <&keysn_17>;
+		unifykey-index-18= <&keysn_18>;
+		unifykey-index-19= <&keysn_19>;
 
 		keysn_0: key_0{
 			key-name = "usid";
@@ -1238,6 +1240,16 @@
 			key-name = "KEY_PROVISION_XXX";
 			key-device = "provision";
 			key-permit = "write";
+		};
+		keysn_18:key_18{
+			key-name = "attestationdevidbox";// attest dev id box
+			key-device = "secure";
+			key-permit = "read","write","del";
+		};
+		keysn_19:key_19{
+			key-name = "oemkey";
+			key-device = "normal";
+			key-permit = "read","write","del";
 		};
 	};//End unifykey
 
