--- a/arch/arm/boot/dts/amlogic/gxl_p241_v2-1g.dts
+++ b/arch/arm/boot/dts/amlogic/gxl_p241_v2-1g.dts
@@ -84,7 +84,7 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			/* ion_codec_mm max can alloc size 80M*/
-			size = <0xd000000>;
+			size = <0xe000000>;
 			alignment = <0x400000>;
 			linux,contiguous-region;
 			alloc-ranges = <0x30000000 0x10000000>;
@@ -94,18 +94,17 @@
 		//di_reserved:linux,di {
 		//	compatible = "amlogic, di-mem";
 			/** 10x3133440=30M(0x1e) support 8bit **/
-		//	size = <0x1e00000>;
+		//	size = <0x0 0x1e00000>;
 			//no-map;
 		//};
-		/*di CMA pool */
 		di_cma_reserved:linux,di_cma {
 			compatible = "shared-dma-pool";
+			status = "disable";
 			reusable;
-			/** 10x3552320=34M(0x22) support 8bit **/
-			/** 10x44596800=44M(0x2c) support 12bit **/
-			/** 10x4074560=39M(0x27) support 10bit **/
-			//size = <0x02400000>;
-			size = <0x2800000>;
+			/** 10x3133440=30M(0x1e) support 8bit **/
+			//size = <0x2000000>;
+			//size = <0x2800000>;
+			size = <0x0>;
 			alignment = <0x400000>;
 			alloc-ranges = <0x30000000 0x10000000>;
 		};
@@ -141,10 +140,10 @@
 		};
 		/*  POST PROCESS MANAGER */
 		ppmgr_reserved:linux,ppmgr {
-			compatible = "amlogic, ppmgr_memory";
+			compatible = "shared-dma-pool";
 			size = <0x0>;
-			multi-use;
 		};
+
 		picdec_cma_reserved:linux,picdec {
 			compatible = "shared-dma-pool";
 			reusable;
@@ -1061,22 +1060,20 @@
 	deinterlace {
 		compatible = "amlogic, deinterlace";
 		status = "okay";
-		flag_cma = <1>;/*0:use reserved;1:use cma*/
+		flag_cma = <4>;/*0:use reserved;1:use cma*/
 		//memory-region = <&di_reserved>;
 		memory-region = <&di_cma_reserved>;
-		interrupts = <0 46 1
-				0 6 1>;
-		interrupt-names = "de_irq",
-				"timerc";
+		interrupts = <0 46 1 0 6 1>;
+		interrupt-names = "de_irq",	"timerc";
+		/*
+		 * nr_size(byte) = 1920*544*2(yuv422 8bit) |
+		 * 1920*544*2*12/8(yuv422 10bit)
+		 * | 1920*544*2*10/8(yuv422 10bit full pack mode)
+		 */
 		/* mtn_size(byte) = 1920*544/2 */
 		/* count_size(byte) = 1920*544/2 */
-		/* mv_size(byte) = 1920*544*2/5 */
-		/* mc_size(byte) = 544*2 */
-		buffer-size = <3552320>;
+		buffer-size = <3133440>;
 		hw-version = <2>;
-		/* reserve-iomap = "true"; */
-		/* if enable nr10bit, set nr10bit-surpport to 1 */
-		nr10bit-surpport = <0>;
 	};
 
 	ionvideo {
