RDK: add dobly fw support on q version kernel [1/1]
PD#SWPL-35322

Problem:
  on g12a_u212 platform, after change to q-version kernel,
dolby ms12 library decryption failed

Solution:
  add dobly fw support on q version kernel

Verify:
play ac3 on device

Change-Id: I7b12890970d16836caf9d7b19546facedaa95613
Signed-off-by: Xueling Li <xueling.li@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/mesong12a.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesong12a.dtsi
@@ -285,6 +285,11 @@
 		sys_poweroff = <0x84000008>;
 	};
 
+	dolby_fw: dolby_fw {
+		compatible = "amlogic, dolby_fw";
+		mem_size = <0x100000>;
+		status = "okay";
+	};
 	vpu {
 		compatible = "amlogic, vpu-g12a";
 		dev_name = "vpu";
